tests/fixtures/errors/assumes_unknown_assert.gcl
// Error: unknown assert in #[assumes]
param x: Dimensionless = 1.0;

#[assumes(nonexistent)]
node y: Dimensionless = @x * 2.0;
